# cargo-info

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-and-release.yaml  test.yaml
src/: args.rs  crates.rs  errors.rs  main.rs
