[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>", "lightning1141@gmail.com"]
categories = ["development-tools::cargo-plugins"]
description = "Extends cargo to query crates.io registry for crates details"
documentation = "https://github.com/light4/cargo-info"
keywords = ["cargo", "info", "subcommand"]
license = "Apache-2.0/MIT"
name = "cargo-info"
repository = "https://github.com/light4/cargo-info"
version = "0.6.2"
edition = "2021"

[badges]
travis-ci = { repository = "imp/cargo-info" }
gitlab = { repository = "imp/cargo-info" }

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
chrono-humanize = "0.2.2"
clap = { version = "4.0.18", features = ["derive"] }
json = "0.12.4"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["rt", "net", "macros"] }

[profile.release]
lto = "thin"
