[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>", "lightning1141@gmail.com"]
categories = ["development-tools::cargo-plugins"]
description = "Extends cargo to query crates.io registry for crates details"
documentation = "https://github.com/light4/cargo-info"
keywords = ["cargo", "info", "subcommand"]
license = "Apache-2.0/MIT"
name = "cargo-info"
repository = "https://github.com/light4/cargo-info"
version = "0.6.4"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
chrono-humanize = "0.2.2"
clap = { version = "4.0.26", features = ["derive"] }
json = "0.12.4"
ureq = "2.5.0"

[profile.release]
lto = "thin"
