[package]
authors = [
    "Cyril Plisko <cyril.plisko@mountall.com>",
    "lightning1141@gmail.com",
]
categories = ["development-tools::cargo-plugins"]
description = "Extends cargo to query crates.io registry for crates details"
documentation = "https://github.com/light4/cargo-info"
keywords = ["cargo", "info", "subcommand"]
license = "Apache-2.0/MIT"
name = "cargo-info"
repository = "https://github.com/light4/cargo-info"
version = "0.6.8"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
chrono-humanize = { git = "https://github.com/light4/chrono-humanize.git", tag = "0.2.3" }
clap = { version = "4.2", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
    "error-context",
] }
color-eyre = "0.6"
json = "0.12"
ureq = "2.6"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
